Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 5.5.49
-
Fix Version/s: 5.5.50
-
Component/s: Temporal Types
-
Labels:None
-
Environment:mysql Ver 15.1 Distrib 5.5.49-MariaDB, for Linux (x86_64) using readline 5.1
-
Sprint:5.5.50
Description
Hi,
This a follow up to MDEV-9521. the NULL value is returned as expected now but format of date still appears as date_time even if columns are date type.
Same test case as MDEV-9521 , query now returns:
+----+------------+---------------------+
|
| id | date_debut | date_fin |
|
+----+------------+---------------------+
|
| 1 | 2016-01-01 | 2016-01-31 00:00:00 |
|
| 2 | 2016-02-01 | 2016-01-28 00:00:00 |
|
| 3 | 2016-03-01 | 2016-03-31 00:00:00 |
|
| 4 | 2016-04-01 | NULL |
|
+----+------------+---------------------+
|
This is still not the same as 5.5.44.
Attachments
Issue Links
- is part of
-
MDEV-9521 Least function returns 0000-00-00 for null date columns instead of null
-
- Closed
-