MDEV-9972 Least function retuns date in date time format